These are the release notes for the WikibaseLib extension.

Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:WikibaseLib
Latest version of the release notes: https://gerrit.wikimedia.org/r/gitweb?p=mediawiki/extensions/Wikibase.git;a=blob;f=lib/RELEASE-NOTES



=== Version 0.3 ===
(dev)

* Introduced EntityId interface
* Implemented proper serialization in EntityObject
* Improved Change classes
* Added countLinks and getLinks in SiteLinkLookup
* Removed Statements, StatementList, StatementListAccess and StatementsAggregate and replace usages by corresponding Claim classes
* Claims can now be looked up by GUID in any ClaimListAccess
* HashArray now supports driving classes that accept duplicates
* Hashable, Copyable, Immutable and Comparable have been removed in favour of the same interfaces in DataValues

=== Version 0.2 ===
(???)

* Statements are now claims, instead of objects containing a claim
* Implemented PropertyObject and QueryObject
* Added ByPropertyIdArray
* Added TemplateStore
* Added Term interface

=== Version 0.1 ===
(2012-11-01)

Initial release with these features:

* Objects to represent entities and items
* Objects to represent SiteLinks
* Change propagation system using a shared table
** Objects to represent changes
** ChangeNotifier and ChangeHandler interfaces
** Maintenance script pollForChanges to detect new changes
* Store interfaces for SiteLink lookups and SiteLink caching
* Maintenance scripts to rebuild or delete all data