@@ -29,7 +29,7 @@ use MWException;
  * @licence GNU GPL v2+
  * @author Jeroen De Dauw < jeroendedauw@gmail.com >
  */
-class SnakSerializer extends ApiSerializerObject {
+class SnakSerializer extends SerializerObject {
 
 	/**
 	 * @see ApiSerializer::getSerialized
