@@ -33,10 +33,10 @@ use Wikibase\ByPropertyListSerializer;;
  * @licence GNU GPL v2+
  * @author Jeroen De Dauw < jeroendedauw@gmail.com >
  */
-class ByPropertyListSerializerTest extends ApiSerializerBaseTest {
+class ByPropertyListSerializerTest extends SerializerBaseTest {
 
 	/**
-	 * @see ApiSerializerBaseTest::getClass
+	 * @see SerializerBaseTest::getClass
 	 *
 	 * @since 0.2
 	 *
@@ -57,7 +57,7 @@ class ByPropertyListSerializerTest extends ApiSerializerBaseTest {
 	}
 
 	/**
-	 * @see ApiSerializerBaseTest::validProvider
+	 * @see SerializerBaseTest::validProvider
 	 *
 	 * @since 0.2
 	 *
