@@ -36,7 +36,7 @@ use Wikibase\PropertyObject, Wikibase\Property;
 class PropertySerializerTest extends EntitySerializerBaseTest {
 
 	/**
-	 * @see ApiSerializerBaseTest::getClass
+	 * @see SerializerBaseTest::getClass
 	 *
 	 * @since 0.3
 	 *
@@ -60,7 +60,7 @@ class PropertySerializerTest extends EntitySerializerBaseTest {
 	}
 
 	/**
-	 * @see ApiSerializerBaseTest::validProvider
+	 * @see SerializerBaseTest::validProvider
 	 *
 	 * @since 0.3
 	 *
